syntax = "proto3";

package keystore;

option go_package = "github.com/ava-labs/avalanchego/proto/pb/keystore";

message GetDatabaseRequest {
  string username = 1;
  string password = 2;
}

message GetDatabaseResponse {
  uint32 db_server = 1;
}

service Keystore {
  rpc GetDatabase(GetDatabaseRequest) returns (GetDatabaseResponse);
}
